Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <!-- Trái tim trung tâm -->
 <div class="heart" id="heart">
   <img src="img1.png" alt="heart" />
-  <span>an:></span>
+  <span>♡</span>
 </div>
 
 <!-- Text neon -->
@@ -215,30 +215,14 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "an day roi",
-  "an doi",
-  "an buon ngu00",
-  ".",
-  "..",
-  ". .",
-  ".  .",
-  ".   .",
-  ".    .",
-  ".     .",
-  "..____..",
-  ".._____..",
-  "..      ..",
-  ".._______..",
-  "..________..",
-  "..         ..",
-  "__          __",
-  "doan xem day la gi ne:>",
-  "..",
-  "khong biet minh lam co bi lech khong nua",
-  "loan yeu hom qua ngu quen ha",
-  "00",
-  "chuc may man",
-];
+  "chieu nay loan yeu co phai den truong khong",
+  "neu loan yeu den truong chac la do hoc bu he",
+  "00hom qua loan yeu ngu quen biet gi khong do",
+  ".-.",
+  "khi nao ranh",
+  "loan yeu lam banh nhe",
+  "khong can nhieu dau a@@",
+];//241
 let lineIndex = 0;
 
 function startNeonText() {
@@ -268,644 +252,1483 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:p
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan yeu di hoc met khong
-:3
-:3
-:3
-:3
-:3
-hom nay loan an sang khong
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan dinh ngu trua khong do
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan yeu di hoc met khong
-:3
-:3
-:3
-:3
-:3
-hom nay loan an sang khong
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan dinh ngu trua khong do
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan yeu di hoc met khong
-:3
-:3
-:3
-:3
-:3
-hom nay loan an sang khong
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-hom nay loan dinh ngu trua khong do
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:p
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:p
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:p
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:p
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
-:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+:>
+:3
+7
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
+:>
+:3
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+trua nay khong ngu la toi bi ngu quen do:p
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
 :3
 `;
 const heart = document.getElementById("heart");
@@ -991,6 +1814,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
