--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "chieu nay loan yeu co phai den truong khong",
-  "neu loan yeu den truong chac la do hoc bu he",
-  "00hom qua loan yeu ngu quen biet gi khong do",
-  ".-.",
-  "khi nao ranh",
-  "loan yeu lam banh nhe",
-  "khong can nhieu dau a@@",
+  "...˚ʚ♡ɞ˚...",
+  "...------...",
+  "..--..--..--..",
+  "-__.__-__.__-",
+  "0.0.0.0.0.0.0.0",
+  "---..---..---",
+  "__________________",
 ];//241
 let lineIndex = 0;
 
@@ -799,7 +799,7 @@ trua nay khong ngu la toi bi ngu quen do:p
 6
 7
 6
-trua nay khong ngu la toi bi ngu quen do:p
+:0
 7
 6
 7
@@ -824,7 +824,7 @@ trua nay khong ngu la toi bi ngu quen do:p
 :>
 :3
 6
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+:0
 6
 7
 6
@@ -845,7 +845,7 @@ loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
 7
 6
 7
-trua nay khong ngu la toi bi ngu quen do:p
+:p
 6
 7
 :>
@@ -891,7 +891,7 @@ trua nay khong ngu la toi bi ngu quen do:p
 :3
 7
 6
-trua nay khong ngu la toi bi ngu quen do:p
+:p
 7
 6
 7
@@ -937,7 +937,7 @@ trua nay khong ngu la toi bi ngu quen do:p
 :>
 :3
 7
-trua nay khong ngu la toi bi ngu quen do:p
+;-;
 6
 7
 6
@@ -966,330 +966,12 @@ trua nay khong ngu la toi bi ngu quen do:p
 7
 6
 7
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
+loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen
 6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
-:>
-:3
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-:>
-:3
-7
-6
-7
-6
 :>
 :3
 7
 6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
 :>
 :3
 7
@@ -1304,8 +986,8 @@ trua nay khong ngu la toi bi ngu quen do:p
 6
 :>
 :3
+:D
 7
-trua nay khong ngu la toi bi ngu quen do:p
 6
 7
 6
@@ -1346,22 +1028,16 @@ trua nay khong ngu la toi bi ngu quen do:p
 7
 6
 7
+00
 6
 :>
 :3
-trua nay khong ngu la toi bi ngu quen do:p
 7
 6
 7
 :>
 :3
-6
-7
-6
-7
 6
-:>
-:3
 7
 6
 7
@@ -1374,45 +1050,24 @@ trua nay khong ngu la toi bi ngu quen do:p
 6
 :>
 :3
-7
-6
 7
 6
 7
-:>
-:3
-6
-7
 6
 :>
 :3
-7
-6
 7
 6
 7
 6
-:>
-:3
 7
-trua nay khong ngu la toi bi ngu quen do:p
-6
 :>
 :3
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
-6
-7
 6
 7
 6
-7
-:>
-:3
-6
 :>
 :3
-7
-6
 7
 6
 7
@@ -1421,30 +1076,20 @@ loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
 6
 :>
 :3
+@@
 7
 6
-7
-6
-7
-6
-7
-6
 :>
 :3
 7
-:>
-:3
 6
 7
 6
 7
 6
-trua nay khong ngu la toi bi ngu quen do:p
 7
-6
 :>
 :3
-7
 6
 :>
 :3
@@ -1454,39 +1099,27 @@ trua nay khong ngu la toi bi ngu quen do:p
 6
 7
 6
-:>
-:3
 7
 6
-7
 :>
 :3
-6
 7
 6
 7
 6
-:>
-:3
 7
 6
-7
+:<
 6
 :>
 :3
 7
-6
-7
-6
 :>
 :3
-7
 6
 7
 6
 7
-:>
-:3
 trua nay khong ngu la toi bi ngu quen do:p
 6
 7
@@ -1495,6 +1128,55 @@ trua nay khong ngu la toi bi ngu quen do:p
 :3
 7
 6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+zzz zz
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
 7
 6
 7
@@ -1530,41 +1212,148 @@ trua nay khong ngu la toi bi ngu quen do:p
 7
 6
 7
+zzz
 6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+:o
+:>
+:3
+7
+6
+zzz
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+:0
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
 trua nay khong ngu la toi bi ngu quen do:p
 7
 6
 7
-6
-:>
-:3
-7
-:>
-:3
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
 :>
 :3
 6
@@ -1577,7 +1366,6 @@ loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
 7
 6
 7
-trua nay khong ngu la toi bi ngu quen do:p
 6
 :>
 :3
@@ -1595,67 +1383,6 @@ trua nay khong ngu la toi bi ngu quen do:p
 :>
 :3
 6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
 7
 6
 :>
@@ -1671,6 +1398,67 @@ trua nay khong ngu la toi bi ngu quen do:p
 7
 trua nay khong ngu la toi bi ngu quen do:p
 6
+:>
+:3
+:O
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+:0
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
 7
 :>
 :3
@@ -1683,7 +1471,217 @@ trua nay khong ngu la toi bi ngu quen do:p
 :3
 7
 6
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+trua nay khong ngu la toi bi ngu quen do:p
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+loan yeu doan xem co bao nhieu :< xuat hien nhen
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+:>
+:3
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+:>
+:3
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:>
+:3
+6
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
+:>
+:3
+7
+6
+7
+6
+7
+6
+:>
+:3
+7
+:p
+6
+7
+:>
+:3
+6
+7
+6
+7
+6
+:>
+:3
+7
+6
 6
 :>
 :3
