--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "...˚ʚ♡ɞ˚...",
-  "...------...",
-  "..--..--..--..",
-  "-__.__-__.__-",
-  "0.0.0.0.0.0.0.0",
-  "---..---..---",
-  "__________________",
+  "mot su that co the loan yeu khong biet",
+  "o trong doi tuyen duoc sang phong cua khac do",
+  "hinh nhu tuan nao cung co may ac trong dt anh voi toan",
+  "sang xem voi chuc may man cho dt tin@@",
+  "zzz",
+  "zz",
+  "zzzz",
 ];//241
 let lineIndex = 0;
 
@@ -252,1482 +252,8 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-:>
-:3
-7
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
+o day nen de loi bai hat he:>
 :0
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-:0
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:p
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:p
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-;-;
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-loan yeu doan xem 1 giay tren man hinh co bao nhieu :3 xuat hien nhen
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-:D
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-00
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-@@
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:<
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-zzz zz
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-zzz
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-:o
-:>
-:3
-7
-6
-zzz
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-:0
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-trua nay khong ngu la toi bi ngu quen do:p
-6
-:>
-:3
-:O
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-:0
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-loan yeu doan xem co bao nhieu :< xuat hien nhen
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:>
-:3
-6
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-:p
-6
-7
-:>
-:3
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-6
-:>
-:3
-7
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-:>
-:3
-6
-7
-6
-:>
-:3
-7
-6
-7
-6
-7
-6
-:>
-:3
-7
-6
-:>
-:3
-trua nay khong ngu la toi bi ngu quen do:p
-7
-6
-7
-6
-7
-6
-7
-:>
-:3
-6
-:>
-:3
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -1812,6 +338,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
