Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "mot su that co the loan yeu khong biet",
-  "o trong doi tuyen duoc sang phong cua khac do",
-  "hinh nhu tuan nao cung co may ac trong dt anh voi toan",
-  "sang xem voi chuc may man cho dt tin@@",
-  "zzz",
-  "zz",
-  "zzzz",
+  "dt minh duoc co mua cho tra sua do:D",
+  "co tot bung ghe",
+  "...",
+  "het nua roi;-;",
+  "",
+  "",
+  "",
 ];//241
 let lineIndex = 0;
 
@@ -338,6 +338,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
