--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "dt minh duoc co mua cho tra sua do:D",
-  "co tot bung ghe",
-  "...",
-  "het nua roi;-;",
+  ";-;",
+  "top 1 2 trong dt moi duoc di ha noi;0",
+  "==minh top 4 5 6 7 8 9 10 11 12 13 14",
   "",
   "",
   "",
+  ":0",
 ];//241
 let lineIndex = 0;
 
@@ -338,6 +338,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
