Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -215,13 +215,14 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  ";-;",
-  "top 1 2 trong dt moi duoc di ha noi;0",
-  "==minh top 4 5 6 7 8 9 10 11 12 13 14",
-  "",
-  "",
-  "",
-  ":0",
+  "nam truoc hay nam kia a",
+  "minh co lam mot bai quoc te",
+  "hinh nhu minh co cho loan yeu xem roi",
+  "va minh duoc top 9999999999999999999999",
+  "bay h minh vao xem lai",
+  "lam duoc 1 cau roi ne@@",
+  "tuy khong nhieu nhung cung hay, nhi:0",
+  "nam do ai duoc 10000$ chac thich lam==",
 ];//241
 let lineIndex = 0;
 
@@ -252,44 +253,7 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-I built a melody from scattered dreams,
-Paper hearts caught in piano beams,
-Every word I wrote fell slightly shy,
-Of what I meant but couldn’t try.
-
-
-The ink runs wild, the thought runs free,
-But still it slips away from me.
-
-What should it be placed in here?
-A whisper, a sigh, or something clear?
-The silence hums, the lines appear,
-But what should it be placed in here?
-
-I sketched a rhythm, soft and slow,
-The meaning trembled, didn’t show.
-Maybe truth is just a sound,
-You only hear when no one’s around.
-
-Maybe it’s laughter I should hide,
-Or tears I left on the other side.
-Maybe a storm, or maybe calm,
-A wordless note inside my palm.
-
-What should it be placed in here?
-A whisper, a sigh, or something clear?
-
-If I leave this empty space,
-Would silence fill it with its grace?
-Or should I color it with doubt,
-Let the meaning fade in and out?
-
-I’ll leave a pause, not wrong, not right,
-Between the dark and softer light.
-If wonder’s all that will appear,
-Then maybe that’s what should be here.
-
-Maybe fill my heart with you~
+:>
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -374,6 +338,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
