Restore and enhance interactive heart feature
Restored and updated the HTML structure, styles, and scripts for the interactive heart and chat features.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-:>
+hom nay minh ktra gk nen ve lop do@@
+khong lam duoc luon== kho qua
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -338,6 +339,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
