Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "nam truoc hay nam kia a",
-  "minh co lam mot bai quoc te",
-  "hinh nhu minh co cho loan yeu xem roi",
-  "va minh duoc top 9999999999999999999999",
-  "bay h minh vao xem lai",
-  "lam duoc 1 cau roi ne@@",
-  "tuy khong nhieu nhung cung hay, nhi:0",
-  "nam do ai duoc 10000$ chac thich lam==",
+  "da bao lau roi",
+  "o day lau qua",
+  "...",
+  "co ca mang nhen roi kia",
+  "==",
+  "loan yeu biet gi khong",
+  "den mua dong roi do",
+  "co le, minh nen di an kem",
 ];//241
 let lineIndex = 0;
 
@@ -253,8 +253,10 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-hom nay minh ktra gk nen ve lop do@@
-khong lam duoc luon== kho qua
+zzz
+zz
+zzzz
+minh day roi ne0@
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -339,6 +341,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
