Refactor HTML and JavaScript for interactive features
The HTML structure and JavaScript functionality have been updated, including changes to the neon text and heart animation features.

--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
+  "())( <- fish",
+  "00",
+  "minh",
+  "hoi hoi ki cuc",
+  "==nhung ma",
   "da bao lau roi",
-  "o day lau qua",
-  "...",
-  "co ca mang nhen roi kia",
-  "==",
-  "loan yeu biet gi khong",
-  "den mua dong roi do",
-  "co le, minh nen di an kem",
+  "loan yeu chua vao day",
+  "00",
 ];//241
 let lineIndex = 0;
 
@@ -253,10 +253,7 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-zzz
-zz
-zzzz
-minh day roi ne0@
+;-;
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -341,6 +338,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
